test-manifests/istio-routing/destinationrule-service-b.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b
  namespace: default
spec:
  host: service-b.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
